qtplasmac: "VEL:" label now indicates active velocity reduction and shows commanded feed rate percentage
The velocity label ("VEL:") now reflects (typically within 100 ms) when a M67/M68  E3 velocity reduction is active by appending "@XX%" to the VEL: label to show the effective percentage of the programmed feed rate.

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,13 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>009.068 2025 July 25</u></b>
+<ul style="margin:0;">
+  <li>"VEL:" label now indicates active velocity reduction and shows commanded feed rate percentage</li>
+  <li>suppress gcode filter warnings when material feed rate is 0</li>
+  <li>prevent material selector from opening when velocity label or indicator is clicked</li>
+  <li>allow velocity reduction between 1-100, fix documentation inconsistency</li>
+
 <br><b><u>008.067 2025 June 28</u></b>
 <ul style="margin:0;">
   <li>allow clicking error notification background to stop error blinking</li>
