qtplasmac: enhance cutcritical dialog with checkboxes for each untoggled button
This allows the user a chance to toggle the buttons they forgot prior to starting a cut.

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,10 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>009.069 2025 July 28</u></b>
+<ul style="margin:0;">
+  <li>enhance cutcritical dialog with checkboxes for each untoggled button</li>
+
 <br><b><u>009.068 2025 July 25</u></b>
 <ul style="margin:0;">
   <li>"VEL:" label now indicates active velocity reduction and shows commanded feed rate percentage</li>
