qtplasmac: add M52P1 to conversational pre and postamble

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,10 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>009.070 2025 August 07</u></b>
+<ul style="margin:0;">
+  <li>add M52P1 to conversational pre and postamble</li>
+
 <br><b><u>009.069 2025 July 28</u></b>
 <ul style="margin:0;">
   <li>enhance cutcritical dialog with checkboxes for each untoggled button</li>
