--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -28,6 +28,10 @@
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
 <br><b><u>009.070 2025 August 07</u></b>
 <ul style="margin:0;">
+  <li>add newlines between codes in conversational pre and postamble</li>
+
+<br><b><u>009.070 2025 August 07</u></b>
+<ul style="margin:0;">
   <li>add M52P1 to conversational pre and postamble</li>
 
 <br><b><u>009.069 2025 July 28</u></b>
