qtplasmac g-code filter: do a little less filtering of z moves with <keep-z-motion>
Previously we would remove things like:
G53 G0 Z[#<_ini[axis_z]max_limit> - 0.19685] even when #<keep-z-motion> was active.

Also, if #<keep-z-motion> is turned off, the g-code filter wil ensure the next rapid move gets a Z move up for safety.

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,36 +26,40 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
-<br><b><u>009.070 2025 August 07</u></b>
+<br><b><u>009.072 2025 Oct 26</u></b>
+<ul style="margin:0;">
+  <li>do a little less filtering of z moves with keep-z-motion</li>
+
+<br><b><u>009.071 2025 Aug 07</u></b>
 <ul style="margin:0;">
   <li>add newlines between codes in conversational pre and postamble</li>
 
-<br><b><u>009.070 2025 August 07</u></b>
+<br><b><u>009.070 2025 Aug 07</u></b>
 <ul style="margin:0;">
   <li>add M52P1 to conversational pre and postamble</li>
 
-<br><b><u>009.069 2025 July 28</u></b>
+<br><b><u>009.069 2025 Jul 28</u></b>
 <ul style="margin:0;">
   <li>enhance cutcritical dialog with checkboxes for each untoggled button</li>
 
-<br><b><u>009.068 2025 July 25</u></b>
+<br><b><u>009.068 2025 Jul 25</u></b>
 <ul style="margin:0;">
   <li>"VEL:" label now indicates active velocity reduction and shows commanded feed rate percentage</li>
   <li>suppress gcode filter warnings when material feed rate is 0</li>
   <li>prevent material selector from opening when velocity label or indicator is clicked</li>
   <li>allow velocity reduction between 1-100, fix documentation inconsistency</li>
 
-<br><b><u>008.067 2025 June 28</u></b>
+<br><b><u>008.067 2025 Jun 28</u></b>
 <ul style="margin:0;">
   <li>allow clicking error notification background to stop error blinking</li>
   <li>add dialog-error icon to error notification box</li>
 
-<br><b><u>008.066 2025 June 19</u></b>
+<br><b><u>008.066 2025 Jun 19</u></b>
 <ul style="margin:0;">
   <li>fix misshaped conversational internal angled rectangles</li>
 </ul>
 
-<br><b><u>008.065 2025 June 06</u></b>
+<br><b><u>008.065 2025 Jun 06</u></b>
 <ul style="margin:0;">
   <li>start conversational shapes at origin</li>
   <li>uppercase conversational</li>
@@ -168,7 +172,7 @@
   <li>fix file load after single cut</li>
 </ul>
 
-<br><b><u>008.046 2024 June 5</u></b>
+<br><b><u>008.046 2024 Jun 5</u></b>
 <ul style="margin:0;">
   <li>add control buttons to conversational preview</li>
 </ul>
