qtplasmac: fix material mod/creation via magic comments
Thank you to MTTI from the forum for pointing this bug out and for helping track down the root cause:

https://forum.linuxcnc.org/plasmac/57960-qtplasmac-magic-comments-not-creating-materials-from-g-code#339316

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,11 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>009.073 2025 Nov 27</u></b>
+<ul style="margin:0;">
+  <li>fix gcode filter copy/paste error</li>
+  <li>fix modifying\creating new materials via magic comments</li>
+
 <br><b><u>009.072 2025 Oct 26</u></b>
 <ul style="margin:0;">
   <li>do a little less filtering of z moves with keep-z-motion</li>
@@ -63,7 +68,7 @@
 <ul style="margin:0;">
   <li>start conversational shapes at origin</li>
   <li>uppercase conversational</li>
-  <li>adaptive feed consistancy
+  <li>adaptive feed consistency
   <li>conversational block refactor</li>
 </ul>
 
