qtplasmac: fix bugs and enhance Run From Line
-Starting M3 command would sometimes be taken from the next operation, and was not always matched with the operation type that was intended.
-Fixed typos and copy/paste bugs
-Dont present lead-in dialog if not within an active cutting operation (between M3 and M5)
-Enhance "This Cutpath" to include scribing, spotting, and keep-z-motion operations.  Possibly should be renamed "This Operation" but leaving as is for now.

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,10 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>009.075 2025 Nov 29</u></b>
+<ul style="margin:0;">
+  <li>Fix bugs and enhance Run From Line</li>
+
 <br><b><u>009.074 2025 Nov 28</u></b>
 <ul style="margin:0;">
   <li>add icons for Operator Text and Operator Display dialog boxes</li>
