qtplasmac: add Slat Height and Material Thickness probing option (and other tweaks)
Other tweaks:
allow probe Height and Safe Height to be zero to follow component and docs
normalize distance decimal places for Parameters tab
tweak gcode filter decimal places

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,9 +26,18 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>010.076 2025 Dec 22</u></b>
+<ul style="margin:0;">
+  <li>allow probe test to be aborted when plasmac.probe-test-error goes true</li>
+  <li>reload material file before repopulating the GUI</li>
+  <li>allow Probe Height and Safe Height to be zero to follow component and docs</li>
+  <li>normalize distance decimal places for Parameters tab</li>
+  <li>tweak gcode filter decimal places</li>
+  <li>add Slat Height and Material Thickness probing option</li>
+
 <br><b><u>009.075 2025 Nov 29</u></b>
 <ul style="margin:0;">
-  <li>Fix bugs and enhance Run From Line</li>
+  <li>fix bugs and enhance Run From Line</li>
 
 <br><b><u>009.074 2025 Nov 28</u></b>
 <ul style="margin:0;">
