qtplasmac: change power button from ActionButton to QPushButton on 9x16 screen
I noticed this did not behave as expected, for some reason the power button was different than the other two screens (16x9 and 4x3) that behave as expected.

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,10 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>010.077 2025 Dec 22</u></b>
+<ul style="margin:0;">
+  <li>change power button from ActionButton to QPushButton on 9x16 screen</li>
+
 <br><b><u>010.076 2025 Dec 22</u></b>
 <ul style="margin:0;">
   <li>allow probe test to be aborted when plasmac.probe-test-error goes true</li>
