qtplasmac:  fix tabbing order for recent GUI additions
Also, make all spinboxes consistent for Auto Activate THC

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,11 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>010.078 2025 Dec 26</u></b>
+<ul style="margin:0;">
+  <li>fix tabbing order for recent GUI additions</li>
+  <li>make all spinboxes consistent for Auto Activate THC</li>
+
 <br><b><u>010.077 2025 Dec 22</u></b>
 <ul style="margin:0;">
   <li>change power button from ActionButton to QPushButton on 9x16 screen</li>
