qtplasmac: align cone_size spinboxs with glcanon allowables

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,14 +26,29 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>014.079 2026 Jan 01</u></b>
+<br><b>QtPlasmaC GUI</b>
+<ul style="margin:0;">
+  <li>079: align cone_size spinboxs with glcanon allowables</li>
+</ul>
+<b>PlasmaC Component</b>
+<ul style="margin:0;">
+  <li>014: remove safe_min from THC top limit check in Mode 2</li>
+  <li>013: allow THC up/down outputs in Mode 2 when idle</li>
+  <li>012: fix arc voltage ring buffer off-by-one errors</li>
+  <li>011: general housekeeping</li>
+</ul>
+
 <br><b><u>010.078 2025 Dec 26</u></b>
 <ul style="margin:0;">
   <li>fix tabbing order for recent GUI additions</li>
   <li>make all spinboxes consistent for Auto Activate THC</li>
+</ul>
 
 <br><b><u>010.077 2025 Dec 22</u></b>
 <ul style="margin:0;">
   <li>change power button from ActionButton to QPushButton on 9x16 screen</li>
+</ul>
 
 <br><b><u>010.076 2025 Dec 22</u></b>
 <ul style="margin:0;">
@@ -43,35 +58,43 @@
   <li>normalize distance decimal places for Parameters tab</li>
   <li>tweak gcode filter decimal places</li>
   <li>add Slat Height and Material Thickness probing option</li>
+</ul>
 
 <br><b><u>009.075 2025 Nov 29</u></b>
 <ul style="margin:0;">
   <li>fix bugs and enhance Run From Line</li>
+</ul>
 
 <br><b><u>009.074 2025 Nov 28</u></b>
 <ul style="margin:0;">
   <li>add icons for Operator Text and Operator Display dialog boxes</li>
+</ul>
 
 <br><b><u>009.073 2025 Nov 27</u></b>
 <ul style="margin:0;">
   <li>fix gcode filter copy/paste error</li>
   <li>fix modifying\creating new materials via magic comments</li>
+</ul>
 
 <br><b><u>009.072 2025 Oct 26</u></b>
 <ul style="margin:0;">
   <li>do a little less filtering of z moves with keep-z-motion</li>
+</ul>
 
 <br><b><u>009.071 2025 Aug 07</u></b>
 <ul style="margin:0;">
   <li>add newlines between codes in conversational pre and postamble</li>
+</ul>
 
 <br><b><u>009.070 2025 Aug 07</u></b>
 <ul style="margin:0;">
   <li>add M52P1 to conversational pre and postamble</li>
+</ul>
 
 <br><b><u>009.069 2025 Jul 28</u></b>
 <ul style="margin:0;">
   <li>enhance cutcritical dialog with checkboxes for each untoggled button</li>
+</ul>
 
 <br><b><u>009.068 2025 Jul 25</u></b>
 <ul style="margin:0;">
@@ -79,11 +102,13 @@
   <li>suppress gcode filter warnings when material feed rate is 0</li>
   <li>prevent material selector from opening when velocity label or indicator is clicked</li>
   <li>allow velocity reduction between 1-100, fix documentation inconsistency</li>
+</ul>
 
 <br><b><u>008.067 2025 Jun 28</u></b>
 <ul style="margin:0;">
   <li>allow clicking error notification background to stop error blinking</li>
   <li>add dialog-error icon to error notification box</li>
+</ul>
 
 <br><b><u>008.066 2025 Jun 19</u></b>
 <ul style="margin:0;">
