qtplasmac: rework torch pulse
Previously holding a torch pulse past the timer end would cause a repeated 1mS drop out at the end of each repeat of the prescribed time interval.  While probably benign, it was not ideal.  Also reworked to not rely on setting the time to 0 to end a torch pulse.  The GUI timer is now to show the time remaining on the button only and is independent of the component's torch pulse timer.

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,11 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>015.080 2026 Feb 01</u></b>
+<ul style="margin:0;">
+  <li>rework torch pulse</li>
+</ul>
+
 <br><b><u>014.079 2026 Jan 01</u></b>
 <br><b>QtPlasmaC GUI</b>
 <ul style="margin:0;">
