qtplasmac:  clarify section/option error message for user buttons

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,16 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>015.081 2026 Feb 03</u></b>
+<ul style="margin:0;">
+  <li>rename variables to avoid conflict with python builtin names</li>
+  <li>remove redundant str() calls in f-strings</li>
+  <li>fix tab level</li>
+  <li>fix typo in pmx485 fault list</li>
+  <li>allow file clear button to work if single cut encounters a bounds error</li>
+  <li>clarify section/option error message for user buttons</li>
+</ul>
+
 <br><b><u>015.080 2026 Feb 01</u></b>
 <ul style="margin:0;">
   <li>rework torch pulse</li>
