qtplasmac: refactor button interlocking

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,12 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>015.082 2026 Feb 06</u></b>
+<ul style="margin:0;">
+  <li>refactor button interlocking</li>
+  <li>fix laser button state if bounds error during laser dry run</li>
+</ul>
+
 <br><b><u>015.081 2026 Feb 03</u></b>
 <ul style="margin:0;">
   <li>rename variables to avoid conflict with python builtin names</li>
