qtplasmac:  add z-motion watchdog to GUI to catch any state-change hang ups not caught by monitoring motion.eoffset-limited

--- a/share/qtvcp/screens/qtplasmac/versions.html
+++ b/share/qtvcp/screens/qtplasmac/versions.html
@@ -26,6 +26,19 @@
 </table>
 <br>
 <!--- ****** ADD NEXT VERSION BELOW THIS LINE ****** --->
+<br><b><u>016.083 2026 Feb 20</u></b>
+<br><b>QtPlasmaC GUI</b>
+<ul style="margin:0;">
+  <li>update tooltips to included missing GUI elements and remove duplicate translations</li>
+  <li>fix RFL string comparisons</li>
+  <li>fix interlock for Material Parameters</li>
+  <li>add z-motion watchdog to GUI to catch any state-change hang ups not caught by monitoring motion.eoffset-limited</li>
+</ul>
+<b>PlasmaC Component</b>
+<ul style="margin:0;">
+  <li>monitor motion.eoffset-limited to determine if the commanded motion is outside of the soft limits</li>
+</ul>
+
 <br><b><u>015.082 2026 Feb 06</u></b>
 <ul style="margin:0;">
   <li>refactor button interlocking</li>
